# playdate-rust-template

./: Cargo.toml  Crank.toml  README.md  flake.nix
src/: lib.rs
