[package]
name = "playdate-rust-template"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-xbuild]
memcpy = false
sysroot_path = "target/sysroot"
panic_immediate_abort = false

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0.79", default-features = false }
crankstart = { git = "https://github.com/pd-rs/crankstart.git" }
crankstart-sys = { git = "https://github.com/pd-rs/crankstart.git" }
cstr_core = { version = "=0.1.2", default-features = false, features = ["alloc"] }
euclid = { version = "0.22.9", default-features = false, features = ["libm"] }

[lints]
clippy.pedantic = "warn"
clippy.use_self = "warn"
